[package]
name = "exp_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
teloxide-core = { version = "0.9.1", default-features = false, features = ["auto_send", "rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
