[package]
name = "exp_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
teloxide-core = { version = "0.9.1", default-features = false, features = ["auto_send", "rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.17", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "time"] }
tokio-postgres = "0.7.8"
dotenv = "0.15.0"
regex = "1.8.4"
rust_decimal = { version = "1.30.0", features = ["db-tokio-postgres"] }
