[package]
name = "exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", default-features = false }
clap = { version = "4.3.4", features = ["derive"] }
fs-err = "2.9.0"
itertools = "0.10.5"
palette = "0.7.2"
plotters = "0.3.5"
